--- a/Makefile.in
+++ b/Makefile.in
@@ -43604,4 +43604,10 @@ $(srcdir)/configure: @MAINT@ $(srcdir)/configure.ac $(srcdir)/config/acx.m4 \
 .NOEXPORT:
 MAKEOVERRIDES=
 
+
+.PHONY: cc1
+cc1:
+	make all-gcc TARGET-gcc=cc1$(exeext)
+ 
+
 # end of Makefile.in
